@@ -670,3 +670,4 @@ MakeInvisible = "Make invisible"
 ViewDetails = "View details"
 MoveToCategory = "Move to category"
 EndingAssignments = "Ending assignments"
+LeavePublicationPage = "You are about to leave this page without publishing the selected objects, are you sure you wish to leave?"
